# Ising2Level

./: .gitignore  CMakeLists.txt  LICENSE.md  Simulation.h  SpinLattice2level.cpp  SpinLattice2level.h  ising-headless.cpp  ising-live.cpp  ising-with-plots.cpp  ising.cpp  ising.h  isingHeadless.cpp  readme.md  utils.h
lib/cv-plot-1.2.1/: README.md
lib/cv-plot-1.2.1/doc/: integration.md  other-libraries.md  tutorial.md
results/: ReduceObservableMulti.mlx  addReweightToData.mlx  importMulti.m  postCalculationsMulti.mlx  reweightTemps.mlx
test/ctest/: CMakeLists.txt  assert_macro.h  testIsing.cpp
